--- a/Project 3 - Data Modeling with Amazon Redshift/test_queries.ipynb
+++ b/Project 3 - Data Modeling with Amazon Redshift/test_queries.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "editable": true
    },
@@ -401,7 +401,7 @@
        "[('free', 1), ('paid', 6)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "editable": true
    },
@@ -434,36 +434,36 @@
        "        <th>song</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Adelitas Way</td>\n",
-       "        <td>Scream</td>\n",
+       "        <td>Alejandro Lerner</td>\n",
+       "        <td>Campeones De La Vida</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Gob</td>\n",
-       "        <td>Face the Ashes</td>\n",
+       "        <td>Saafi Brothers</td>\n",
+       "        <td>Supernatural Pt. II</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Chaka Khan_ Rufus</td>\n",
-       "        <td>Take Time</td>\n",
+       "        <td>Blitzen Trapper</td>\n",
+       "        <td>Christmas Is Coming Soon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Poe</td>\n",
-       "        <td>Walk the Walk</td>\n",
+       "        <td>O.A.R.</td>\n",
+       "        <td>One Shot (Album Version)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Thomas Dutronc</td>\n",
-       "        <td>China Boy</td>\n",
+       "        <td>David Sanborn</td>\n",
+       "        <td>Black Light (Album Version)</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('Adelitas Way', 'Scream'),\n",
-       " ('Gob', 'Face the Ashes'),\n",
-       " ('Chaka Khan_ Rufus', 'Take Time'),\n",
-       " ('Poe', 'Walk the Walk'),\n",
-       " ('Thomas Dutronc', 'China Boy')]"
+       "[('Alejandro Lerner', 'Campeones De La Vida'),\n",
+       " ('Saafi Brothers', 'Supernatural Pt. II'),\n",
+       " ('Blitzen Trapper', 'Christmas Is Coming Soon'),\n",
+       " ('O.A.R.', 'One Shot (Album Version)'),\n",
+       " ('David Sanborn', 'Black Light (Album Version)')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,6 +471,15 @@
    "source": [
     "%sql select a.name as Artist, s.title as Song from songs s inner join artists a on s.artist_id=a.artist_id limit 5"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
